WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308852
WebKit is slow at opening very big HTML files
https://bugs.webkit.org/show_bug.cgi?id=308852
Summary
WebKit is slow at opening very big HTML files
Nipun Shukla
Reported
2026-02-27 14:57:31 PST
rdar://144245503
Attachments
Add attachment
proposed patch, testcase, etc.
Nipun Shukla
Comment 1
2026-02-27 15:01:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59613
EWS
Comment 2
2026-03-05 23:23:04 PST
Committed
308781@main
(3ce7856bc424): <
https://commits.webkit.org/308781@main
> Reviewed commits have been landed. Closing PR #59613 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug